# Hacker_News_Chinese

./: .env.example  .gitignore  Makefile  PRD.md  README.md  TODO.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: router.py
app/api/endpoints/: __init__.py  auth.py  health.py  news.py
app/core/: config.py  decorators.py  logger.py  news_ingestor.py  prompts.py
app/models/: article.py
app/repositories/: article_repository.py
app/schemas/: article.py  contexts.py  hn.py
app/services/: auth_service.py  extraction_service.py  hn_service.py  summarizer_service.py  translate_service.py  user.py
backend/: .gitignore  pyproject.toml
backend/app/api/: __init__.py  deps.py  router.py
backend/app/api/endpoints/: articles.py  chat.py  news.py
backend/app/core/: config.py  news_ingestor.py  prompts.py  scheduler.py
backend/app/db/: supabase.py
backend/app/models/: article.py
backend/app/repositories/: article_repository.py
backend/app/schemas/: chat.py
backend/app/services/: article_service.py  chat_service.py  extraction_service.py  hn_service.py  translate_service.py  vector_service.py
backend/app/services/contexts/: story_contexts.py
db/: document_chunk.sql  schema.sql
db/functions/: match_documents.sql
