[tool.poetry]
name = "Hacker_News_Chinese"
version = "1.0.0"
description = "Hacker News Chinese"
authors = ["Hacker News Chinese <hackernews@example.com>"]
readme = "README.md"

packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
supabase = "^2.24.0"
llama-index-vector-stores-supabase = "^0.4.1"
pydantic-settings = "^2.12.0"
pydantic = {extras = ["email"], version = "^2.12.4"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

